# ula-video-game

./: Makefile  README.md  main.c
flappy_bird/: .clang-format  .gitignore  CMakeLists.txt  Makefile  main.cpp
flappy_bird/settings/: CMakeLists.txt  Settings.cpp
flappy_bird/src/: Bird.cpp  Bird.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Log.cpp  LogPair.cpp  LogPair.hpp  World.cpp  World.hpp  text_utilities.cpp
flappy_bird/src/states/: BaseState.hpp  CountDownState.cpp  CountDownState.hpp  PauseState.cpp  PauseState.hpp  PlayingState.cpp  PlayingState.hpp  StateMachine.cpp  StateMachine.hpp  TitleScreenState.cpp  TitleScreenState.hpp
pong/: CMakeLists.txt  Makefile  README.md
pong/src/: fonts.c  paddle.h  paddle_ia.h  pong.c  pong.h
src/: CMakeLists.txt  ball.c  ball.h  hitbox.c  paddle.c  paddle.h  paddle_ia.c  pong.c  sounds.c
